fix(basicShell): add polyfill and tweak clear()
return Promise on clear()

--- a/src/@littleware/little-elements/lib/styleGuide/shell/basicShell.html.njk
+++ b/src/@littleware/little-elements/lib/styleGuide/shell/basicShell.html.njk
@@ -9,6 +9,7 @@
         style-src 'self' 'unsafe-inline' https://unpkg.com https://fonts.googleapis.com; 
         object-src 'none'; 
         font-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com"
+        manifest-src 'self'
         >
     
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1" />
@@ -32,30 +33,55 @@
               display: none;
           }
       </style>
-      <h1 id="lw-loading">Loading ...</h1>
+      <h1 id="lw-loading"></h1>
   </div>
 
   <script id="lw-shell">
     (function(){
+        const startTime = Date.now();
         let intervalId = null;
         let count = 0;
+        let clearPromise = null;
 
+        /**
+         * Shell to help with asynchronously loading pages.
+         * Shows `Loading ...` animation after half a second.
+         * Throttles page load by minimum of 250ms.
+         * TODO: transition animation, service worker setup
+         */
         window.littleShell = {
+            /**
+             * Clear the shell
+             * 
+             * @return promise that resolves when the shell clears
+             */
             clear: function() {
                 if (intervalId) {
+                    const now = Date.now();
                     clearInterval(intervalId);
                     intervalId = null;
+                    
+                    clearPromise = new Promise(
+                        function(resolve) {
+                            setTimeout(
+                                function() {
+                                    let shell = document.body.querySelector('div.lw-shell');
+                                    if (shell) {
+                                        document.body.removeChild(shell);
+                                    }
+                                    resolve('ok');
+                                }, Math.max(250-(now-startTime), 20)
+                            );
+                        }
+                    )
                 }
-                let shell = document.body.querySelector('div.lw-shell');
-                if (shell) {
-                    document.body.removeChild(shell);
-                }
+                return clearPromise;
             }
         };
         
         intervalId = setInterval(function() {
-            const str = 'Loading....................';
-            count = (count + 1) % 10;
+            const str = 'Loading ....................';
+            count = (count + 1) % 15;
             let heading = document.body.querySelector('#lw-loading');
             if (heading) {
                 heading.textContent = str.substring(0, 10+count);
@@ -66,6 +92,7 @@
         
     })();
   </script>
+  <script src="/modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 
   <div class="lw-content-root">
     {% block content %}
