--- a/src/@littleware/little-elements/lib/styleGuide/shell/basicShell.html.njk
+++ b/src/@littleware/little-elements/lib/styleGuide/shell/basicShell.html.njk
@@ -92,7 +92,7 @@
         
     })();
   </script>
-  <script src="/modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="{{ jsroot }}/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 
   <div class="lw-content-root">
     {% block content %}
