--- a/src/@littleware/little-elements/lib/styleGuide/shell/basicShell.html.njk
+++ b/src/@littleware/little-elements/lib/styleGuide/shell/basicShell.html.njk
@@ -8,8 +8,9 @@
         script-src 'self' 'unsafe-inline' https://www.google-analytics.com; 
         style-src 'self' 'unsafe-inline' https://unpkg.com https://fonts.googleapis.com; 
         object-src 'none'; 
-        font-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com"
+        font-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com;
         manifest-src 'self'
+        "
         >
     
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1" />
