chore(lw-app-context): working on web runtime

--- a/src/@littleware/little-elements/lib/styleGuide/shell/basicShell.html.njk
+++ b/src/@littleware/little-elements/lib/styleGuide/shell/basicShell.html.njk
@@ -29,6 +29,8 @@
           .lw-shell {
               margin: 50px;
               color: #222222;
+              font-family: sans-serif;
+              box-sizing: border-box;
           }
           .lw-content-root {
               display: none;
