--- a/src/@littleware/little-elements/lib/styleGuide/shell/basicShell.html.njk
+++ b/src/@littleware/little-elements/lib/styleGuide/shell/basicShell.html.njk
@@ -3,7 +3,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="Content-Security-Policy" 
-        content="default-src 'none'; 
+        content="default-src 'none';
+        connect-src 'self';
         img-src 'self' data: https://www.google-analytics.com; 
         script-src 'self' 'unsafe-inline' https://www.google-analytics.com; 
         style-src 'self' 'unsafe-inline' https://unpkg.com https://fonts.googleapis.com; 
