--- a/src/@littleware/little-elements/lib/styleGuide/shell/basicShell.html.njk
+++ b/src/@littleware/little-elements/lib/styleGuide/shell/basicShell.html.njk
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="Content-Security-Policy" 
         content="default-src 'none';
-        connect-src 'self';
+        connect-src 'self' https://api.frickjack.com https://beta-api.frickjack.com;
         img-src 'self' data: https://www.google-analytics.com; 
         script-src 'self' 'unsafe-inline' https://www.google-analytics.com; 
         style-src 'self' 'unsafe-inline' https://unpkg.com https://fonts.googleapis.com; 
