--- a/src/@littleware/little-elements/lib/styleGuide/shell/basicShell.html.njk
+++ b/src/@littleware/little-elements/lib/styleGuide/shell/basicShell.html.njk
@@ -7,7 +7,7 @@
         connect-src 'self' https://api.frickjack.com https://beta-api.frickjack.com https://www.google-analytics.com;
         img-src 'self' data: https://www.google-analytics.com; 
         script-src 'self' 'unsafe-inline' https://www.google-analytics.com; 
-        style-src 'self' 'unsafe-inline' https://unpkg.com https://fonts.googleapis.com; 
+        style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; 
         object-src 'none'; 
         font-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com;
         manifest-src 'self'
