chore(linting): misc fixes

--- a/src/@littleware/little-elements/lib/styleGuide/shell/basicShell.html.njk
+++ b/src/@littleware/little-elements/lib/styleGuide/shell/basicShell.html.njk
@@ -22,80 +22,8 @@
 {% endblock %}
 </head>
 <body>
-  <div class="lw-shell">
-      <style>
-          :root {
-            background-color: #eeeeee;
-          }
-          .lw-shell {
-              margin: 50px;
-              color: #222222;
-              font-family: sans-serif;
-              box-sizing: border-box;
-          }
-          .lw-content-root {
-              display: none;
-          }
-      </style>
-      <h1 id="lw-loading"></h1>
-  </div>
 
-  <script id="lw-shell">
-    (() =>{
-        const startTime = Date.now();
-        let intervalId = null;
-        let count = 0;
-        let clearPromise = null;
-
-        /**
-         * Shell to help with asynchronously loading pages.
-         * Shows `Loading ...` animation after half a second.
-         * Throttles page load by minimum of 250ms.
-         * TODO: transition animation, service worker setup
-         */
-        window.littleShell = {
-            /**
-             * Clear the shell
-             * 
-             * @return promise that resolves when the shell clears
-             */
-            clear: () => {
-                if (intervalId) {
-                    const now = Date.now();
-                    clearInterval(intervalId);
-                    intervalId = null;
-                    
-                    clearPromise = new Promise(
-                        function(resolve) {
-                            setTimeout(
-                                () => {
-                                    let shell = document.body.querySelector('div.lw-shell');
-                                    if (shell) {
-                                        document.body.removeChild(shell);
-                                    }
-                                    resolve('ok');
-                                }, Math.max(250-(now-startTime), 20)
-                            );
-                        }
-                    )
-                }
-                return clearPromise;
-            }
-        };
-        
-        intervalId = setInterval(() => {
-            const str = 'Loading ....................';
-            count = (count + 1) % 15;
-            let heading = document.body.querySelector('#lw-loading');
-            if (heading) {
-                heading.textContent = str.substring(0, 10+count);
-            } else {
-                littleShell.clear();
-            }
-        }, 500);
-        
-    })();
-  </script>
+  <script src="{{ jsroot }}/@littleware/little-elements/web/lib/styleGuide/shell/basicShell.js"></script>
   <script src="{{ jsroot }}/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 
   <div class="lw-content-root">
